[package]
name = "btc-puzzle-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bitcoin = "0.31"
secp256k1 = "0.28"
k256 = "0.13"
sha2 = { version = "0.10", features = ["asm"] }
ripemd = "0.1"
rand = "0.8"
futures = "0.3"
parking_lot = "0.12"
hex = "0.4"
core_affinity = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
